<resources>
    <string name="app_name">Fruit List</string>
    <string name="add_fruit">Add Fruit</string>
    <string name="rice">Rice</string>
    <string name="water">Water</string>
    <string name="noodles">Noodles</string>
    <string name="mobile">Mobile</string>
    <string name="headphone">Headphone</string>
    <string name="cheese">Cheese</string>
    <string name="apple">Apple</string>
    <string name="mango">Mango</string>
    <string name="orange">Orange</string>
    <string name="laptop">Laptop</string>
    <string name="charger">Charger</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="search_shop">Search Shop</string>
</resources>